<resources>
    <string name="app_name">Plantae</string>
    <string name="action_settings">Settings</string>
    <string name="log_out_string">Log out </string>
    <string name="content_desc">Image</string>
    <string name="selected_items">Selected items </string>
    <string name="title_projects">Projects </string>
    <string name="title_travels">Trips</string>
    <string name="title_specimens">Specimens</string>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="action_add">Add new</string>
    <string name="action_delete">Delete</string>
    <string name="action_accept">Accept</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="yes">Yes</string>
    <string name="no">No </string>
    <string name="and">and</string>
    <string name="comma">,</string>
    <string name="action_delete_travel">Delete trip</string>
    <string name="action_edit_trip">Edit trip</string>
    <string name="no_travels">No trips</string>
    <string name="add_new_travels">Add new trips</string>
    <string name="open_nav_drawer">Open the navigation drawer</string>
    <string name="manage_text">Manage</string>
    <string name="manage_travels">Manage trips</string>
    <string name="select_travel">Select a trip to show its contents</string>
    <string name="string_action_save">Save</string>
    <string name="string_action_discard">Discard</string>
    <string name="title_activity_viaje_list_fragment">Trip list</string>
    <string name="title_activity_proyecto_list_fragment">Project list</string>
    <string name="take_photo">Take a picture </string>
    <string name="view_pictures">View pictures</string>
    <string name="pick_color">Pick a color </string>
    <string name="no_specimens">No specimens were found </string>
    <string name="add_new_specimen">Add a new specimen</string>
    <string name="delete_specimen_confirmation_message">Delete specimen? this will delete the specimen and its contents. </string>
    <string name="action_rebuild_journey">Rebuild route</string>
    <string name="action_add_detailed">Add new detailed</string>
    <string name="save_feedback">The specimen was saved</string>
    <string name="string_action_save_and_new">Add new</string>
    <string name="title_activity_create_travel">Create trip</string>
    <string name="promtp_travel_name">Trip name</string>
    <string name="promtp_travel_description">Description</string>
    <string name="prompt_agregar_colector_secundario">Add collector</string>
    <string name="titulo_colectores_secundarios">Secondary collectors</string>
    <string name="no_secondary_collectors_selected">No secondary collectors selected </string>
    <string name="title_project">Project</string>
    <string name="create_project">Create project</string>
    <string name="select_project">Select a project</string>
    <string name="default_project_name">Default project</string>
    <string name="add_project">Add a new project</string>
    <string name="delete_project">Delete project(s) </string>
    <string name="edit_project">Edit project </string>
    <string name="title_secondary_collector">Secondary collector</string>
    <string name="create_secondary_collector">Create secondary collector</string>
    <string name="select_secondary_collectors">Collectors </string>
    <string name="add_secondary_collector">Add secondary collector</string>
    <string name="delete_secondary_collector">Delete secondary collector(s) </string>
    <string name="edit_secondary_collector">Edit secondary collector </string>
    <string name="no_travels_found">No trips were found </string>
    <string name="add_new_travel">Add a new trip</string>
    <string name="delete_travel_confirmation_message">Delete trip? this will delete the trip and its contents. </string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">The email address is invalid </string>
    <string name="error_incorrect_password">This email and or password is incorrect </string>
    <string name="error_field_required">This field is required </string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_register_email">Email</string>
    <string name="prompt_register_password">Password </string>
    <string name="prompt_register_fullname">Full name </string>
    <string name="action_register"><b>Register</b></string>
    <string name="action_register_short"><b>Register</b></string>
    <string name="register_progress">Registering…</string>
    <string name="error_register_invalid_email">This email address is invalid</string>
    <string name="error_register_being_used_email">This email address is already being used</string>
    <string name="error_register_short_password">This password is too short</string>
    <string name="error_register_simple_password">This password is too simple, use uppercase, lowercase letters, numbers and symbols</string>
    <string name="error_register_incorrect_fieldnumber">This field number is invalid</string>
    <string name="error_register_incorrect_institution">This institution is invalid</string>
    <string name="error_register_incorrect_fullname">This name is invalid</string>
    <string name="error_register_field_required">This field is required</string>
    <string name="collector_data_type">Detailed data capture mode</string>
    <string name="simple_data_type">Simple data capture mode is designed for biologists who store basic data about their specimens and omit physiological data of the plants.</string>
    <string name="detailed_data_type">Detailed data capture mode is designed for biologists who store more data of their specimens including physiologic measures.</string>
    <string name="prompt_register_collector_number">Collection number </string>
    <string name="prompt_register_institution">Institution </string>
    <string name="edit_specimen_title">Edit specimen</string>
    <string name="collecting_information_title">Collecting information </string>
    <string name="prompt_collecting_date">Collection date </string>
    <string name="prompt_collector_number">Collector number </string>
    <string name="prompt_collecting_method">Collection method </string>
    <string name="prompt_collecting_station">Season </string>
    <string name="flower_information_title">Flower</string>
    <string name="flowers_information_subtitle">Flower information</string>
    <string name="prompt_calyx">Calyx</string>
    <string name="prompt_corolla">Corolla </string>
    <string name="prompt_stamens">Stamens </string>
    <string name="prompt_pistiliodio">Pistillode </string>
    <string name="prompt_gineceo">Gynoecium </string>
    <string name="prompt_stigmata">Stigma</string>
    <string name="prompt_flowers_description">Flower description </string>
    <string name="fruits_information_title">Fruits </string>
    <string name="mature_information_title">Mature fruit</string>
    <string name="prompt_pericarp">Pericarp </string>
    <string name="prompt_exocarp">Exocarp</string>
    <string name="prompt_endocarp">Endocarp </string>
    <string name="prompt_mesocarp">Mesocarp </string>
    <string name="immature_fruit_title">Immature fruit</string>
    <string name="prompt_fruits_description">Fruit description </string>
    <string name="pericarp_dry">Dry </string>
    <string name="pericarp_fleshy">Fleshy </string>
    <string name="pericarp_irritating">Irritant </string>
    <string name="habitat_information_title">Habitat </string>
    <string name="habitat_information_subtitle">Habitat information</string>
    <string name="prompt_vegetation">Vegetation</string>
    <string name="prompt_soil_substratum">Soil - substrate </string>
    <string name="prompt_associated_species">Associated species</string>
    <string name="inflorescence_information_title">Inflorescence </string>
    <string name="inflorescence_information_subtitle">Inflorescence information </string>
    <string name="prompt_inflorescence_alone">Solitary? </string>
    <string name="prompt_prophyll_nature">Prophyll description</string>
    <string name="prompt_prophyll_size">Prophyll size </string>
    <string name="prompt_bracts_title">Peduncular bracts </string>
    <string name="prompt_bracts_number">Number of bracts</string>
    <string name="prompt_bracts_position">Bract position</string>
    <string name="prompt_bracts_size">Bract size </string>
    <string name="prompt_bracts_nature">Description of peduncular bracts</string>
    <string name="prompt_peduncle_size">Peduncle size </string>
    <string name="prompt_rachis_size">Rachis size </string>
    <string name="prompt_rachillae_number">Rachillae number </string>
    <string name="prompt_rachillae_size">Rachillae size </string>
    <string name="inflorescence_color_title">Inflorescence color </string>
    <string name="prompt_in_flower_color">Flower color</string>
    <string name="prompt_in_fruit_color">Fruit color </string>
    <string name="prompt_inflorescence_description">Inflorescence description </string>
    <string name="leaves_information_title">Leaves</string>
    <string name="leaf_information_subtitle">Leaf information</string>
    <string name="prompt_leaves_number">Number of leaves </string>
    <string name="prompt_sheath_color">Sheath color </string>
    <string name="locality_information_title">Locality </string>
    <string name="prompt_locality_name">Locality name </string>
    <string name="prompt_county">County</string>
    <string name="prompt_state">State</string>
    <string name="prompt_country">Country </string>
    <string name="prompt_min_elevation">Min elevation </string>
    <string name="prompt_max_elevation">Max elevation </string>
    <string name="line_separator">-</string>
    <string name="prompt_longitude">Longitude </string>
    <string name="prompt_latitude">Latitude </string>
    <string name="prompt_locality_datum">Datum </string>
    <string name="prompt_locality_device_brand">Device brand </string>
    <string name="prompt_locality_description">Description </string>
    <string name="update_location">Update location</string>
    <string name="edit_location">Edit location</string>
    <string name="root_information_title">Root</string>
    <string name="prompt_cone_height">Cone height </string>
    <string name="prompt_in_base_diameter">Diameter at base </string>
    <string name="prompt_roots_diameter">Root diameter </string>
    <string name="prompt_cone_color">Cone color </string>
    <string name="armed_text">Armed? </string>
    <string name="prompt_spines_shape">Spine shape </string>
    <string name="prompt_spines_size">Spine size </string>
    <string name="prompt_roots_description">Description of roots </string>
    <string name="stem_information_title">Stem</string>
    <string name="prompt_stem_height">Stem height</string>
    <string name="prompt_stem_diameter">Stem diameter</string>
    <string name="prompt_stem_color">Stem color </string>
    <string name="prompt_conspicuous_internodes">Internodes conspicuous </string>
    <string name="prompt_internodes_length">Internode length </string>
    <string name="prompt_stem_naked">Stem unarmed</string>
    <string name="prompt_stem_covered">Stem surface </string>
    <string name="prompt_thorns">Spines?</string>
    <string name="prompt_stem_description">Stem Description</string>
    <string name="action_export_csv">Export CSV</string>
</resources>