<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add"
          android:title="@string/action_add"
          android:icon="@drawable/ic_action_add"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_action_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_detailed"
          android:title="@string/action_add_detailed"
          android:visible="false"
          android:icon="@drawable/ic_action_content_new_event"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_rebuild_journey"
          android:title="@string/action_rebuild_journey"
          android:icon="@drawable/ic_action_location_map"
          app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export_csv"
        android:title="@string/action_export_csv"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:showAsAction="ifRoom" />

</menu>
