<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/plantae_card_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/bg_card">
        <LinearLayout
            android:id="@+id/header_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/locality_information_title"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/locality_information_title"
                android:textSize="34sp"/>

            <ProgressBar
                android:id="@+id/progress_bar_coordinates"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:indeterminate="true"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/update_locality_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/plantae_fallback"
                android:src="@drawable/ic_room_grey600_36dp"
                android:contentDescription="@string/update_location"/>

            <ImageButton
                android:id="@+id/edit_locality_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/plantae_fallback"
                android:src="@drawable/ic_mode_edit_grey600_36dp"
                android:contentDescription="@string/edit_location"/>
            </LinearLayout>

        <EditText
            android:id="@+id/locality_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_locality"
            android:hint="@string/prompt_locality_name"
            android:inputType="text"
            android:maxLines="3"/>

        <AutoCompleteTextView
            android:id="@+id/county"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locality_name"
            android:hint="@string/prompt_county"
            android:inputType="text"/>

        <AutoCompleteTextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/county"
            android:hint="@string/prompt_state"
            android:inputType="text"/>

        <AutoCompleteTextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/state"
            android:hint="@string/prompt_country"
            android:inputType="text"/>

        <LinearLayout
            android:id="@+id/elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/country">
            <EditText
                android:id="@+id/min_elevation"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_min_elevation"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_separator"/>

            <EditText
                android:id="@+id/max_elevation"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_max_elevation"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/elevation">
            <EditText
                android:id="@+id/latitude"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_latitude"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_separator"/>

            <EditText
                android:id="@+id/longitude"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_longitude"
                android:inputType="numberDecimal"
                android:maxLines="1"/>

        </LinearLayout>

        <EditText
            android:id="@+id/locality_datum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_locality_datum"
            android:layout_below="@+id/coordinates"
            android:inputType="text"
            android:minLines="3"/>

        <EditText
            android:id="@+id/locality_device_brand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_locality_device_brand"
            android:layout_below="@+id/locality_datum"
            android:inputType="text"
            android:minLines="3"/>

        <EditText
            android:id="@+id/locality_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_locality_description"
            android:layout_below="@+id/locality_device_brand"
            android:inputType="text"
            android:minLines="3"/>

    </RelativeLayout>
</ScrollView>