<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="#e5e5e5">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/bg_card">
        <TextView
            android:id="@+id/stem_information_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stem_information_title"
            android:textSize="34sp" />

        <Spinner
            android:id="@+id/stem_nature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stem_information_title" />

        <EditText
            android:id="@+id/stem_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stem_nature"
            android:hint="@string/prompt_stem_height"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/stem_diameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stem_height"
            android:hint="@string/prompt_stem_diameter"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"/>

        <Spinner
            android:id="@+id/stem_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stem_diameter" />

        <LinearLayout
            android:id="@+id/stem_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/stem_form">
            <EditText
                android:id="@+id/stem_color_text"
                android:layout_width="0dip"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_stem_color"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/stem_color_view"
                android:layout_width="0dip"
                android:layout_weight="0.2"
                android:src="@color/plantae_black"
                android:contentDescription="@string/pick_color"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <EditText
            android:id="@+id/internodes_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stem_color"
            android:hint="@string/prompt_internodes_length"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true"/>

        <CheckBox
            android:id="@+id/conspicuous_internodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/internodes_length"
            android:hint="@string/prompt_conspicuous_internodes"/>

        <LinearLayout
            android:id="@+id/naked_covered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/conspicuous_internodes">
            <CheckBox
                android:id="@+id/stem_naked"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_stem_naked"/>

            <CheckBox
                android:id="@+id/stem_covered"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_stem_covered"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/thorns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/naked_covered"
            android:hint="@string/prompt_thorns"/>

        <Spinner
            android:id="@+id/thorn_arrangement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thorns" />

        <EditText
            android:id="@+id/stem_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_stem_description"
            android:layout_below="@+id/thorn_arrangement"
            android:inputType="text"
            android:minLines="3"/>
    </RelativeLayout>
</ScrollView>