<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:projectList="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_secondary_collector"
          android:title="@string/add_secondary_collector"
          android:icon="@drawable/plus"
          projectList:showAsAction="ifRoom" />
    <item android:id="@+id/action_edit_secondary_collector"
          android:title="@string/edit_secondary_collector"
          android:icon="@drawable/ic_mode_edit_white_36dp"
          projectList:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete_secondary_collectors"
          android:title="@string/delete_secondary_collector"
          android:icon="@drawable/ic_delete_white_36dp"
          projectList:showAsAction="ifRoom" />
</menu>